--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -74,7 +74,8 @@
 	rotatable={true}
 	zoomable={true}
 	onSave={(currentImageIndex, params) => console.log('currentImageIndex, currentImageSrc, params : ', currentImageIndex, this.props.images[currentImageIndex].src, params)}
-/&gt;</code></pre>
+    onPrint={() => window.print()}
+	/&gt;</code></pre>
 
 						</section>
 
